--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "logger",
-  "version": "0.1.0",
+  "name": "custom-logger-nodejs",
+  "version": "0.6.3",
   "description": "node js logger",
   "main": "index.js",
   "scripts": {
